--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   --bg-main-dark: #060803;
   --bg-second: #222527;
   --bg-modal: rgb(239 236 236 / 90%);
+  --moto-text: #ffffff;
 }
 html {
   box-sizing: border-box;
@@ -22,6 +23,9 @@ body {
   font-family: 'Montserrat', sans-serif;
   margin: 0;
   padding: 0;
+}
+.body-fixed {
+  overflow: hidden;
 }
 svg {
   fill: var(--accent-dark);
@@ -122,7 +126,7 @@ svg {
   width: 374px;
 }
 .about__lie {
-  color: var(--main-color);
+  color: var(--moto-text);
 }
 
 .about__btn {
